# cosmic-python

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  flask_app.py  model.py  pyproject.toml  repository.py  requirements.txt  services.py  test_allocate.py  test_api.py  test_batches.py  test_model.py  test_repository.py  test_services.py
adapters/: repository.py
domain/: model.py
entrypoints/: flask_app.py
service_layer/: services.py  unit_of_work.py
src/allocation/adapters/: orm.py  repository.py
src/allocation/domain/: commands.py  events.py  model.py
src/allocation/entrypoints/: flask_app.py
src/allocation/service_layer/: email.py  handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_handler.py  test_product.py  test_services.py
