[project]
name = "cosmic_python"
dynamic = ["readme"]
version = "0.0.1"
authors = [{ name="Marco Richetta", email="marcorichetta@gmail.com" }]
requires-python = ">=3.9"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
lint.select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
lint.ignore = ["E501"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
